# LIFT-KUL

./: .gitignore  FSM_CC  Makefile  Makefile.am  OLD_mod_add.c  README.md  WORD.c  WORD.h  add.c  add.h  add2.c  add2.h  aead_test.h  begcd.c  begcd.h  build_setup.sh  chacha20.c  chacha20.h  chacha20_poly1305_interface.c  chacha20_poly1305_interface.h  communication.c  communication.h  configure.ac  crc.c  division.c  division.h  fsm.c  fsm.h  gcd.c  gcd.h  globals.h  hash.c  hash.h  inverse.c  inverse.h  main  main.c  main.h  makefile  message.c  (+42 more)
LIFT/: .cproject  .project  Makefile.am  configure.ac  makefile  receiver  sender
LIFT/benchmark/: Makefile  communication.c  communication.h  receiver  receiver.c  sender  sender.c
LIFT/src/: config.h
LIFT/src/aead/: aead_test.h  chacha20.c  chacha20.h  chacha20_poly1305_interface.c  chacha20_poly1305_interface.h  poly1305.c  poly1305.h
LIFT/src/common/: add.c  add.h  chacha20_decrypt.c  chacha20_encrypt.c  common.h  communication.c  communication.h  crc.c  crc.h  division.c  division.h  fsm.c  fsm.h  fsm_utils.c  globals.h  inverse.c  inverse.h  main.c  main.h  message.c  message.h  mod.c  mod.h  mult.c  mult.h  random.c  shift.c  shift.h  sub.c  sub.h  utilities.c  utilities.h
LIFT/src/control/: cctest.c  control_includes.h  control_launcher.c  control_utils.c  sender.c
LIFT/src/control_center_launcher/: controlcenter_launcher.c
LIFT/src/drone/: drone_includes.h  drone_launcher.c  drone_utils.c  dronetest.c  receiver.c
LIFT/src/drone_launcher/: drone_launcher.c
LIFT/src/ecc/: p256.c  p256.h  p256_parameters.c  (+3 more)
(+21 files in other folders)
